<resources>
    <string name="app_name">CMSC434Doodler</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="eyedrop">Eyedrop</string>
    <string name="opacity">Opacity</string>
    <string name="custom_color">Custom</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
</resources>
